fix(client): fix modals' z-index

--- a/app/client/src/features/create-column/ui/create-column.module.css
+++ b/app/client/src/features/create-column/ui/create-column.module.css
@@ -43,6 +43,8 @@
     position: fixed;
     top: 50%;
     left: 50%;
+    
+    z-index: 2;
 
     transform: translate(-50%, -50%);
 
