--- a/app/client/src/features/create-project/ui/create-project.module.css
+++ b/app/client/src/features/create-project/ui/create-project.module.css
@@ -44,6 +44,7 @@
     background-color: rgba(0, 0, 0, 0.7);
     position: fixed;
     inset: 0;
+    
     animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
@@ -51,6 +52,8 @@
     position: fixed;
     top: 50%;
     left: 50%;
+
+    z-index: 2;
 
     transform: translate(-50%, -50%);
 
